# bids-mosaic

./: README.md  pyproject.toml
.github/workflows/: test.yml
bids-mosiac/: mosaic.py
bidsmosaic/: __init__.py  mosaic.py
tests/: mosaic_test.py
