[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bidsmosaic"
version = "0.0.1"
dependencies = [
    "numpy",
    "pybids",
    "nilearn",
    "nibabel",
    "reportlab",
    "pillow",
    "matplotlib"
]

[project.scripts]
bids-mosaic = "bidsmosaic.mosaic:main"
