[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bidsmosaic"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pybids>=0.16.0",
    "nilearn>=0.10.0",
    "nibabel>=5.0.0",
    "reportlab>=3.6.12",
    "pillow>=9.3.0",
    "matplotlib>=3.7.0"
]

[project.scripts]
bids-mosaic = "bidsmosaic.mosaic:main"
